--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "Excel": "src"
+            "Sede2\\Excel\\": "src"
         }
     }
 }
